# gem_ws

./: .gitignore  .gitmodules  Dockerfile  README.md
data/models/: vehicle_dynamics_model.pth
data/raw/: gem_sim_data_20251116_213847.csv  gem_sim_data_20251117_054749.csv  gem_sim_data_20251117_131233.csv  gem_sim_data_20251117_131342.csv  gem_sim_data_20251117_132050.csv
src/system_identification/: CMakeLists.txt  package.xml  quick_start.sh
src/system_identification/config/: mpc_config.yaml
src/system_identification/scripts/control/: csv_path_tracker.py  mpc_controller.py  predictor.py
src/system_identification/scripts/data_collection/: data_collector.py
src/system_identification/scripts/training/: test_collected_data.py  train_model.py
